--- a/chargers.html
+++ b/chargers.html
@@ -1,3 +1,44 @@
-<img src = "images/audi_charger.jpeg" alt="" width="200"/>
-<img src = "images/tesla_supercharger.jpeg" alt="" width="200"/>
-<img src = "images/rivian_charging.jpeg" alt="" width="200"/>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="images/favicon.ico">
+	<link rel="stylesheet" href="css/html5reset.css">
+	<link rel="stylesheet" href="css/style.css">
+	<title>About Me</title>
+</head>
+<body>
+	<header>
+		<nav>
+			<ul>
+				<li class="active"><a href = "index.html" >About Me</a></li>
+				<li><a href = "personal.html">My Family</a></li>
+				<li><a href = "random.html">Random</a></li>
+				<li><a href = "http://www.si.umich.edu">UMSI</a></li>
+			</ul>
+		</nav>
+		<h1>Chargers</h1>
+	</header>
+	<main>
+        <img src = "images/audi_charger.jpeg" alt="" width="200"/>
+        <img src = "images/tesla_supercharger.jpeg" alt="" width="200"/>
+        <img src = "images/rivian_charging.jpeg" alt="" width="200"/>
+		<p>I am a Lecturer IV in the School of Information at the 
+			University of Michigan. I focus on the introductory 
+			programming courses such as Data-Oriented Programming 
+			(SI 206) and the Web Design Courses (SI 339 and SI 539).</p>
+		<p>My previous jobs include Associate Professor at 
+			<a href = "http://www.csulb.edu">California State University</a> 
+			and positions at NASA JPL, the Naval Research Lab, and the NSA. 
+			I received my BS from <a href = "http://www.kent.edu">Kent State 
+			University</a>Honors College in Computer Science, and an MS 
+			and PhD from the University of Pittsburgh, also in Computer 
+			Science. My thesis was on Artificial Intelligence applications on 
+			the Nursebot Project, a robotic assistant for the elderly.</p>
+	</main>
+	<footer>
+		<p>Zach Phillips &copy; 2022</p>
+	</footer>
+</body>
+</html>
