--- a/cars.html
+++ b/cars.html
@@ -18,7 +18,7 @@
 				<li><a href = "http://www.si.umich.edu">UMSI</a></li>
 			</ul>
 		</nav>
-		<h1>Chargers</h1>
+		<h1>Cars</h1>
 	</header>
 	<main>
         <img src = "images/audi_etron.jpeg" alt="" width="200"/>
@@ -31,19 +31,10 @@
         <img src = "images/ford_f150.jpeg" alt="" width="200"/>
         <img src = "images/ford_f150_lightning.jpeg" alt="" width="200"/>
         <img src = "images/lamborghini_huracan.jpeg" alt="" width="200"/>
-		<p>I am a Lecturer IV in the School of Information at the 
-			University of Michigan. I focus on the introductory 
-			programming courses such as Data-Oriented Programming 
-			(SI 206) and the Web Design Courses (SI 339 and SI 539).</p>
-		<p>My previous jobs include Associate Professor at 
-			<a href = "http://www.csulb.edu">California State University</a> 
-			and positions at NASA JPL, the Naval Research Lab, and the NSA. 
-			I received my BS from <a href = "http://www.kent.edu">Kent State 
-			University</a>Honors College in Computer Science, and an MS 
-			and PhD from the University of Pittsburgh, also in Computer 
-			Science. My thesis was on Artificial Intelligence applications on 
-			the Nursebot Project, a robotic assistant for the elderly.</p>
-	</main>
+		<p>December 2021 electric vehicle (EV) sales were released as companies reported full-year 2021 sales. Approximately 3 million EVs were sold in China in 2021. Li Auto reported that 2021 sales increased +177% to 90,491 new vehicles, XPeng’s sales increased +263% to 98,155. and Nio’s sales increased +109% to 91,429. BYD’s 2021 EV sales increased to 603,783 versus 2020’s 189,689. Hong Kong-listed clean technology stocks had a strong day led by the EV names along with wind and nuclear power companies. The EU is considering adding natural gas and nuclear to their definition of clean energy, which might have interesting implications for the sector globally.</p>
+        <p>After almost a decade of hype, there are some signs that the electric-vehicle revolution is finally coming to pass. There were over 20 EVs for sale in the United States in 2021, plus many more hybrids and plug-in hybrids. Almost every concept that graces a showroom floor (or, lately, an overproduced livestream) has an electric angle. Automakers are promising to launch dozens of EVs over the next decade. Governors are promising to ban the sale of gas-powered vehicles. And improvements in charging infrastructure and battery technology mean that the vision of an electrified future is clearer than ever.</p>
+        <p>But there's still one problem: In order for EVs to change the world, people are going to have to start driving them.</p>
+    </main>
 	<footer>
 		<p>Zach Phillips &copy; 2022</p>
 	</footer>
