--- a/chargers.html
+++ b/chargers.html
@@ -24,19 +24,12 @@
         <img src = "images/audi_charger.jpeg" alt="" width="200"/>
         <img src = "images/tesla_supercharger.jpeg" alt="" width="200"/>
         <img src = "images/rivian_charging.jpeg" alt="" width="200"/>
-		<p>I am a Lecturer IV in the School of Information at the 
-			University of Michigan. I focus on the introductory 
-			programming courses such as Data-Oriented Programming 
-			(SI 206) and the Web Design Courses (SI 339 and SI 539).</p>
-		<p>My previous jobs include Associate Professor at 
-			<a href = "http://www.csulb.edu">California State University</a> 
-			and positions at NASA JPL, the Naval Research Lab, and the NSA. 
-			I received my BS from <a href = "http://www.kent.edu">Kent State 
-			University</a>Honors College in Computer Science, and an MS 
-			and PhD from the University of Pittsburgh, also in Computer 
-			Science. My thesis was on Artificial Intelligence applications on 
-			the Nursebot Project, a robotic assistant for the elderly.</p>
-	</main>
+		<p>UK Tesla owners are bracing for impact: is 2022 the year in which the velvet rope that separates its Supercharger network finally removed? The network is arguably the jewel in the crown of Tesla ownership, the element that has taken much of the stress out of early EV adoption, but CEO Elon Musk has made clear that he wants to throw it open to non-Tesla EV drivers.</p>
+        <p>Opening up was billed as an altruistic move by Tesla. “It's our goal to support the advent of sustainable energy; it's not to create a walled garden and use that to bludgeon our competitors,” Musk told investors on the second quarter investor call last year.</p>
+        <p>Tesla owners were also told that what’s good for the company is good for you. “Increasing the utilisation of the network actually reduces our costs, which allows us to lower charging prices and make the network more profitable, allowing us to grow the network faster. That's the good thing there,” said Drew Baglino, Tesla’s head of powertrain and energy engineering, on the same call.</p>
+        <p>Rivian announced a new partnership with Under Canvas to bring EV charging to some of the most beautiful campgrounds in the US.</p>
+        <p>Since the beginning, Rivian has been marketing its electric vehicles as “adventure vehicles”. They made an electric pickup truck that is good enough to do anything a gas-powered pickup can do and more, so it made sense to emphasize that with putting the vehicles in adventure scenarios.</p>
+    </main>
 	<footer>
 		<p>Zach Phillips &copy; 2022</p>
 	</footer>
