--- a/ipos.html
+++ b/ipos.html
@@ -23,18 +23,12 @@
 	<main>
         <img src = "images/rivian_IPO.jpeg" alt="" width="200"/>
         <img src = "images/lucid_IPO.jpeg" alt="" width="200"/>
-		<p>I am a Lecturer IV in the School of Information at the 
-			University of Michigan. I focus on the introductory 
-			programming courses such as Data-Oriented Programming 
-			(SI 206) and the Web Design Courses (SI 339 and SI 539).</p>
-		<p>My previous jobs include Associate Professor at 
-			<a href = "http://www.csulb.edu">California State University</a> 
-			and positions at NASA JPL, the Naval Research Lab, and the NSA. 
-			I received my BS from <a href = "http://www.kent.edu">Kent State 
-			University</a>Honors College in Computer Science, and an MS 
-			and PhD from the University of Pittsburgh, also in Computer 
-			Science. My thesis was on Artificial Intelligence applications on 
-			the Nursebot Project, a robotic assistant for the elderly.</p>
+		<p>A worldwide push toward electrification is causing a three-year wave of initial public offerings in the electric vehicle space that could raise about $100 billion until the end of 2023, according to Bank of America Corp.</p>
+		<p>Growing investments in the sector, spanning from batteries to charging cars, will see companies spin off units as well as go public, said Patrick Steinemann, co-head of Global Mobility Group Investment Banking at Bank of America.</p> 
+        <p>Rivian, an electric-vehicle maker that has been around for over a decade, finally got around to delivering a product this year — 156 pickup trucks — and nearly all went to its employees. Despite that minuscule total, investors on Wednesday decided Rivian was in the same league as some of the most recognized names in the auto industry, like General Motors and Ford Motor, which churn out millions of vehicles a year.</p>
+		<p>The big question hanging over young electric vehicle companies is whether they have enough cash on hand to finance their expansion when sales are still low.</p>
+        <p>But Mr. MacDuffie. the Wharton professor, said he believed there was enough potential growth in the electric vehicle market for many companies to succeed. “It’s not so much a winner-takes-all market,” he said. “We are probably more at a rising tide lifts most boats, if not every boat.”</p>
+    
 	</main>
 	<footer>
 		<p>Zach Phillips &copy; 2022</p>
