--- a/manufacturing.html
+++ b/manufacturing.html
@@ -30,19 +30,15 @@
         <img src = "images/lucid.jpeg" alt="" width="200"/>
         <img src = "images/ram_1500.webp" alt="" width="200"/>
         <img src = "images/rivian_r1t.jpeg" alt="" width="200"/>
-		<p>I am a Lecturer IV in the School of Information at the 
-			University of Michigan. I focus on the introductory 
-			programming courses such as Data-Oriented Programming 
-			(SI 206) and the Web Design Courses (SI 339 and SI 539).</p>
-		<p>My previous jobs include Associate Professor at 
-			<a href = "http://www.csulb.edu">California State University</a> 
-			and positions at NASA JPL, the Naval Research Lab, and the NSA. 
-			I received my BS from <a href = "http://www.kent.edu">Kent State 
-			University</a>Honors College in Computer Science, and an MS 
-			and PhD from the University of Pittsburgh, also in Computer 
-			Science. My thesis was on Artificial Intelligence applications on 
-			the Nursebot Project, a robotic assistant for the elderly.</p>
-	</main>
+		<p>Tesla on Sunday said it delivered 308,600 electric vehicles in the fourth quarter of 2021, beating its previous single-quarter record as well as analysts’ expectations. The automaker produced 305,840 fully electric vehicles total during the same period.</p>
+        <p>At Tesla’s 2021 annual shareholder meeting, Musk bemoaned a year marked by supply chain problems that made it difficult to obtain enough microchips and other unspecified parts.</p>
+        <p>Despite overall sales being down about eight percent on the back of global supply chain and chip shortage issues, Volkswagen sold more battery-electric and plug-in hybrid vehicles in 2021 than ever, with more than seven percent of all VW-badged cars having been sold with plugs.</p>
+        <p>The numbers are good and prove what we already knew – consumers want electric cars. There’s even better news, however, if you look at it in a certain light: Volkswagen has a backlog of more than 95,000 ID electric models.</p>
+        <p>That would seem to be good news, as the world tries to wean itself off fossil fuels that are wrecking the global climate. But as electric cars become more popular, some question just how environmentally friendly they are.</p>
+        <p>The batteries in electric vehicles, for example, charge on power that is coming straight off the electric grid — which is itself often powered by fossil fuels. And there are questions about how energy-intensive it is to build an EV or an EV battery, versus building a comparable traditional vehicle.</p>
+        <p>Temperatures in the region can reach 120 degrees Fahrenheit, and residents live under the threat of toxic dust caused by decades of agricultural runoff depositing chemicals into the Salton Sea, a saltwater lake. But in the brine of an aquifer under the lake lies lithium, a key ingredient for electric vehicle batteries, and the billion-dollar drilling project promises to not only transform an impoverished region, but also help the United States gain energy independence.</p>
+        <p>Geothermal energy production has been around for years, but this effort will double dip by extracting lithium from the brine. Much of the lithium used today comes from Australia and South America and is shipped to Asia, where it's refined and used in batteries, which are mostly made in China. With automakers shifting to electric vehicles, lithium could become the “white gold” of the future, and extracting it in California could reduce or even eliminate U.S. dependency on Chinese production, Turner and other experts say.</p>
+    </main>
 	<footer>
 		<p>Zach Phillips &copy; 2022</p>
 	</footer>
